test/types/type_variables/deitz/test_query_field7.good
test_query_field7.chpl:24: error: unresolved call 'foo(borrowed C(real(64),int(64)), borrowed C(real(64),real(64)))'
test_query_field7.chpl:8: note: this candidate did not match: foo(c: borrowed C(int, ?tt) ...?k)
test_query_field7.chpl:8: note: because an argument was incompatible
test_query_field7.chpl:15: note: candidates are: foo(c: borrowed C(real, ?tt) ...?k)
